// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ConfirmButton ui button and icon 1`] = `
<div>
  <div
    style="display: block;"
  >
    <span
      class="button d-inline-block danger"
    >
      <button
        class="btn btn-danger btn-md"
        type="button"
      >
        <div
          class="d-flex justify-content-center align-items-center"
        >
          <i
            class="icon button-icon me-2 material-icons"
          >
            delete
          </i>
          Delete user
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Component: ConfirmButton ui custom class, color and texts 1`] = `
<div>
  <div
    class="bigger-better-and-uncut"
    style="display: block;"
  >
    <span
      class="button d-inline-block info"
    >
      <button
        class="btn btn-info btn-md"
        type="button"
      >
        <div
          class="d-flex justify-content-center align-items-center"
        >
          <i
            class="icon button-icon me-2 material-icons"
          >
            delete
          </i>
          Delete user
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Component: ConfirmButton ui only button 1`] = `
<div>
  <div
    style="display: block;"
  >
    <span
      class="button d-inline-block danger"
    >
      <button
        class="btn btn-danger btn-md"
        type="button"
      >
        <div
          class="d-flex justify-content-center align-items-center"
        >
          Delete user
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Component: ConfirmButton ui only icon 1`] = `
<div>
  <div
    style="display: inline;"
  >
    <span
      class="button danger d-inline-block"
    >
      <i
        class="icon material-icons text-danger clickable"
        style="font-size: 24px;"
      >
        delete
      </i>
    </span>
  </div>
</div>
`;

exports[`Component: ConfirmButton ui only icon in progress 1`] = `
<div>
  <div
    style="display: inline;"
  >
    <span
      class="button danger d-inline-block"
    >
      <svg
        class="spinner"
        height="24"
        viewBox="25 25 50 50"
        width="24"
      >
        <circle
          class="path"
          cx="50"
          cy="50"
          fill="none"
          r="20"
          stroke=""
          stroke-miterlimit="10"
          stroke-width="4"
        />
      </svg>
    </span>
  </div>
</div>
`;
